tests/sawn/fixtures/invalid/11_column_count_mismatch.sawn
// INVALID: Row has fewer columns than header
data[][] a,b,c
  1,2,3
  4,5
